feat: add overall statistic endpoints
